--- a/src/rpart/z211_traintest_estratificado.ipynb
+++ b/src/rpart/z211_traintest_estratificado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -18,8 +18,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 704428</td><td>37.7</td><td> 1321401</td><td> 70.6</td><td>  1321401</td><td> 70.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1317855</td><td>10.1</td><td>83075154</td><td>633.9</td><td>103058080</td><td>786.3</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614675</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093287</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -28,8 +28,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  704428 & 37.7 &  1321401 &  70.6 &   1321401 &  70.6\\\\\n",
-       "\tVcells & 1317855 & 10.1 & 83075154 & 633.9 & 103058080 & 786.3\\\\\n",
+       "\tNcells &  614675 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
+       "\tVcells & 1093287 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -38,18 +38,28 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  704428 | 37.7 |  1321401 |  70.6 |   1321401 |  70.6 |\n",
-       "| Vcells | 1317855 | 10.1 | 83075154 | 633.9 | 103058080 | 786.3 |\n",
+       "| Ncells |  614675 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
+       "| Vcells | 1093287 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used    (Mb) gc trigger (Mb)  max used  (Mb) \n",
-       "Ncells  704428 37.7  1321401    70.6   1321401  70.6\n",
-       "Vcells 1317855 10.1 83075154   633.9 103058080 786.3"
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  614675 32.9 1321401    70.6 1321401  70.6\n",
+       "Vcells 1093287  8.4 8388608    64.0 1632451  12.5"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart' was built under R version 4.2.3\"\n"
+     ]
     }
    ],
    "source": [
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -204,7 +214,7 @@
      "text": [
       "Modelo Bloque:  1 1 1 1 1 1 1 2 2 2 \n",
       "Bloque Repetido:  1 1 1 1 1 1 1 2 2 2 1 1 1 1 1 1 1 2 2 2 1 1 1 1 1 1 1 2 2 2 1 1 1 1 1 1 1 2 2 2 ...\n",
-      "Bloque Repetido:  1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 1 1 2 1 2 1 1 1 2 1 1 1 1 1 2 1 ...\n"
+      "Sample:  1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 1 1 2 1 2 1 1 1 2 1 1 1 1 1 2 1 ...\n"
      ]
     }
    ],
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -349,10 +359,8 @@
    "source": [
     "cat( \"Testing total: \",  dataset[ fold==2, .N ], \"\\n\" )\n",
     "cat( \"Testing BAJA+2: \", dataset[ fold==2 & clase_ternaria ==\"BAJA+2\", .N ], \"\\n\" )\n",
-    "\n",
     "cat( \"Estimulos: \", estimulos, \"\\n\" )\n",
     "cat( \"Aciertos (BAJA+2): \",  aciertos,  \"\\n\" )\n",
-    "\n",
     "cat( \"Ganancia en testing (normalizada): \", ganancia_test_normalizada, \"\\n\" )"
    ]
   }
