--- a/src/rpart/z241_gridsearch_esqueleto.ipynb
+++ b/src/rpart/z241_gridsearch_esqueleto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -18,8 +18,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 614713</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1093477</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 705650</td><td>37.7</td><td> 1321401</td><td> 70.6</td><td>  1321401</td><td> 70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1308393</td><td>10.0</td><td>84753167</td><td>646.7</td><td>119479098</td><td>911.6</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -28,8 +28,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  614713 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
-       "\tVcells & 1093477 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\tNcells &  705650 & 37.7 &  1321401 &  70.6 &   1321401 &  70.6\\\\\n",
+       "\tVcells & 1308393 & 10.0 & 84753167 & 646.7 & 119479098 & 911.6\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -38,28 +38,18 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  614713 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
-       "| Vcells | 1093477 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "| Ncells |  705650 | 37.7 |  1321401 |  70.6 |   1321401 |  70.6 |\n",
+       "| Vcells | 1308393 | 10.0 | 84753167 | 646.7 | 119479098 | 911.6 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  614713 32.9 1321401    70.6 1321401  70.6\n",
-       "Vcells 1093477  8.4 8388608    64.0 1632451  12.5"
+       "       used    (Mb) gc trigger (Mb)  max used  (Mb) \n",
+       "Ncells  705650 37.7  1321401    70.6   1321401  70.6\n",
+       "Vcells 1308393 10.0 84753167   646.7 119479098 911.6"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"package 'data.table' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'rpart' was built under R version 4.2.3\"\n"
-     ]
     }
    ],
    "source": [
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -89,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -113,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -155,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -180,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -214,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -231,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -250,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -271,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -308,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -322,12 +312,12 @@
     "\n",
     "dir.create( \"./exp/\",  showWarnings = FALSE ) \n",
     "dir.create( \"./exp/HT2020/\", showWarnings = FALSE )\n",
-    "archivo_salida  <- \"./exp/HT2020/gridsearch2.csv\"\n"
+    "archivo_salida  <- \"./exp/HT2020/gridsearch.csv\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -350,29 +340,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in mcmapply(ArbolEstimarGanancia, semillas, MoreArgs = list(param_basicos), : 'mc.cores' > 1 is not supported on Windows\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in mcmapply(ArbolEstimarGanancia, semillas, MoreArgs = list(param_basicos), : 'mc.cores' > 1 is not supported on Windows\nTraceback:\n",
+      "1. ArbolesMontecarlo(ksemillas, param_basicos)",
+      "2. mcmapply(ArbolEstimarGanancia, semillas, MoreArgs = list(param_basicos), \n .     SIMPLIFY = FALSE, mc.cores = 5)   # at line 4-8 of file <text>",
+      "3. stop(\"'mc.cores' > 1 is not supported on Windows\")"
+     ]
+    }
+   ],
    "source": [
     "#itero por los loops anidados para cada hiperparametro\n",
     "\n",
-    "for( vmax_depth  in  c( 4, 6, 8, 10, 12, 14 ) )\n",
+    "for( vmax_depth  in  c(6) )\n",
     "{\n",
-    "  for( vmin_split  in  c( 6000,4000,2000,1000, 800, 600, 400, 200, 100)  )\n",
+    "  for( vmin_split  in  c(100,200,300,400,500)  )\n",
     "  {\n",
-    "    for(vmin_bucket in c(32,64,128,256,512,1024))\n",
+    "    for(vmin_bucket in c(128))\n",
     "    {  \n",
-    "      for(vcp  in  c(-0.25,-0.5,-0.75,-1))\n",
+    "      for(vcp  in  c(-1))\n",
     "      {\n",
     "\n",
     "        #notar como se agrega\n",
     "        param_basicos  <- list( \"cp\"=        vcp,         #complejidad minima\n",
     "                                \"minsplit\"=  vmin_split,  #minima cantidad de registros en un nodo para hacer el split\n",
-    "                                \"minbucket\"= vmin_bucket, #minima cantidad de registros en una hoja\n",
+    "                                \"minbucket\"= vmin_split / 2, #vmin_bucket, #minima cantidad de registros en una hoja\n",
     "                                \"maxdepth\"=  vmax_depth ) #profundidad máxima del arbol\n",
     "\n",
     "        ganancia_promedio  <- ArbolesMontecarlo( ksemillas,  param_basicos )\n",
