fix paths on all notebooks

--- a/src/rpart/z321_rpart_BO.ipynb
+++ b/src/rpart/z321_rpart_BO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -18,8 +18,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 614757</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1093689</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td>2130054</td><td>113.8</td><td>4346735</td><td>232.2</td><td>4069616</td><td>217.4</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>3628556</td><td> 27.7</td><td>8388608</td><td> 64.0</td><td>7221399</td><td> 55.1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -28,8 +28,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  614757 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
-       "\tVcells & 1093689 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\tNcells & 2130054 & 113.8 & 4346735 & 232.2 & 4069616 & 217.4\\\\\n",
+       "\tVcells & 3628556 &  27.7 & 8388608 &  64.0 & 7221399 &  55.1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -38,64 +38,18 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  614757 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
-       "| Vcells | 1093689 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "| Ncells | 2130054 | 113.8 | 4346735 | 232.2 | 4069616 | 217.4 |\n",
+       "| Vcells | 3628556 |  27.7 | 8388608 |  64.0 | 7221399 |  55.1 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  614757 32.9 1321401    70.6 1321401  70.6\n",
-       "Vcells 1093689  8.4 8388608    64.0 1632451  12.5"
+       "       used    (Mb)  gc trigger (Mb)  max used (Mb) \n",
+       "Ncells 2130054 113.8 4346735    232.2 4069616  217.4\n",
+       "Vcells 3628556  27.7 8388608     64.0 7221399   55.1"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"package 'data.table' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'rlist' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'rpart' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'DiceKriging' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'mlrMBO' was built under R version 4.2.3\"\n",
-      "Loading required package: mlr\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'mlr' was built under R version 4.2.3\"\n",
-      "Loading required package: ParamHelpers\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'ParamHelpers' was built under R version 4.2.3\"\n",
-      "Warning message: 'mlr' is in 'maintenance-only' mode since July 2019.\n",
-      "Future development will only happen in 'mlr3'\n",
-      "(<https://mlr3.mlr-org.com>). Due to the focus on 'mlr3' there might be\n",
-      "uncaught bugs meanwhile in {mlr} - please consider switching.\n",
-      "\n",
-      "Loading required package: smoof\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'smoof' was built under R version 4.2.3\"\n",
-      "Loading required package: checkmate\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'checkmate' was built under R version 4.2.3\"\n",
-      "\n",
-      "Attaching package: 'checkmate'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:DiceKriging':\n",
-      "\n",
-      "    checkNames\n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -118,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -142,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -177,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -202,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -238,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -270,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -305,17 +259,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/rpart'"
+      ],
+      "text/latex": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/rpart'"
+      ],
+      "text/markdown": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/rpart'"
+      ],
+      "text/plain": [
+       "[1] \"d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/rpart\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Aqui empieza el programa\n",
     "\n",
     "setwd(\".\\\\\")   #Establezco el Working Directory\n",
+    "getwd()\n",
     "\n",
     "#cargo los datos\n",
     "dataset  <- fread(\"./datasets/dataset_pequeno.csv\")\n",
@@ -325,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -345,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -365,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -383,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2007,7 +1981,8 @@
     "               learner= surr.km,\n",
     "               control= ctrl)\n",
     "\n",
-    "} else  run  <- mboContinue( archivo_BO )   #retomo en caso que ya exista\n",
+    "} \n",
+    "  else run  <- mboContinue( archivo_BO )   #retomo en caso que ya exista\n",
     "\n"
    ]
   }
