--- a/src/zero2hero/zero2hero_0113.ipynb
+++ b/src/zero2hero/zero2hero_0113.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -998,6 +998,250 @@
     }
    },
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>0.5</li><li>0.25</li><li>0.125</li><li>0.0625</li><li>0.03125</li><li>0.015625</li><li>0.0078125</li><li>0.00390625</li><li>0.001953125</li><li>0.0009765625</li><li>0.00048828125</li><li>0.000244140625</li><li>0.0001220703125</li><li>6.103515625e-05</li><li>3.0517578125e-05</li><li>1.52587890625e-05</li><li>7.62939453125e-06</li><li>3.814697265625e-06</li><li>1.9073486328125e-06</li><li>9.5367431640625e-07</li><li>4.76837158203125e-07</li><li>2.38418579101562e-07</li><li>1.19209289550781e-07</li><li>5.96046447753906e-08</li><li>2.98023223876953e-08</li><li>1.49011611938477e-08</li><li>7.45058059692383e-09</li><li>3.72529029846191e-09</li><li>1.86264514923096e-09</li><li>9.31322574615479e-10</li><li>4.65661287307739e-10</li><li>2.3283064365387e-10</li><li>1.16415321826935e-10</li><li>5.82076609134674e-11</li><li>2.91038304567337e-11</li><li>1.45519152283669e-11</li><li>7.27595761418343e-12</li><li>3.63797880709171e-12</li><li>1.81898940354586e-12</li><li>9.09494701772928e-13</li><li>4.54747350886464e-13</li><li>2.27373675443232e-13</li><li>1.13686837721616e-13</li><li>5.6843418860808e-14</li><li>2.8421709430404e-14</li><li>1.4210854715202e-14</li><li>7.105427357601e-15</li><li>3.5527136788005e-15</li><li>1.77635683940025e-15</li><li>8.88178419700125e-16</li><li>4.44089209850063e-16</li><li>2.22044604925031e-16</li><li>1.11022302462516e-16</li><li>5.55111512312578e-17</li><li>2.77555756156289e-17</li><li>1.38777878078145e-17</li><li>6.93889390390723e-18</li><li>3.46944695195361e-18</li><li>1.73472347597681e-18</li><li>8.67361737988404e-19</li><li>4.33680868994202e-19</li><li>2.16840434497101e-19</li><li>1.0842021724855e-19</li><li>5.42101086242752e-20</li><li>2.71050543121376e-20</li><li>1.35525271560688e-20</li><li>6.7762635780344e-21</li><li>3.3881317890172e-21</li><li>1.6940658945086e-21</li><li>8.470329472543e-22</li><li>4.2351647362715e-22</li><li>2.11758236813575e-22</li><li>1.05879118406788e-22</li><li>5.29395592033938e-23</li><li>2.64697796016969e-23</li><li>1.32348898008484e-23</li><li>6.61744490042422e-24</li><li>3.30872245021211e-24</li><li>1.65436122510606e-24</li><li>8.27180612553028e-25</li><li>4.13590306276514e-25</li><li>2.06795153138257e-25</li><li>1.03397576569128e-25</li><li>5.16987882845642e-26</li><li>2.58493941422821e-26</li><li>1.29246970711411e-26</li><li>6.46234853557053e-27</li><li>3.23117426778526e-27</li><li>1.61558713389263e-27</li><li>8.07793566946316e-28</li><li>4.03896783473158e-28</li><li>2.01948391736579e-28</li><li>1.0097419586829e-28</li><li>5.04870979341448e-29</li><li>2.52435489670724e-29</li><li>1.26217744835362e-29</li><li>6.31088724176809e-30</li><li>3.15544362088405e-30</li><li>1.57772181044202e-30</li><li>7.88860905221012e-31</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0.5\n",
+       "\\item 0.25\n",
+       "\\item 0.125\n",
+       "\\item 0.0625\n",
+       "\\item 0.03125\n",
+       "\\item 0.015625\n",
+       "\\item 0.0078125\n",
+       "\\item 0.00390625\n",
+       "\\item 0.001953125\n",
+       "\\item 0.0009765625\n",
+       "\\item 0.00048828125\n",
+       "\\item 0.000244140625\n",
+       "\\item 0.0001220703125\n",
+       "\\item 6.103515625e-05\n",
+       "\\item 3.0517578125e-05\n",
+       "\\item 1.52587890625e-05\n",
+       "\\item 7.62939453125e-06\n",
+       "\\item 3.814697265625e-06\n",
+       "\\item 1.9073486328125e-06\n",
+       "\\item 9.5367431640625e-07\n",
+       "\\item 4.76837158203125e-07\n",
+       "\\item 2.38418579101562e-07\n",
+       "\\item 1.19209289550781e-07\n",
+       "\\item 5.96046447753906e-08\n",
+       "\\item 2.98023223876953e-08\n",
+       "\\item 1.49011611938477e-08\n",
+       "\\item 7.45058059692383e-09\n",
+       "\\item 3.72529029846191e-09\n",
+       "\\item 1.86264514923096e-09\n",
+       "\\item 9.31322574615479e-10\n",
+       "\\item 4.65661287307739e-10\n",
+       "\\item 2.3283064365387e-10\n",
+       "\\item 1.16415321826935e-10\n",
+       "\\item 5.82076609134674e-11\n",
+       "\\item 2.91038304567337e-11\n",
+       "\\item 1.45519152283669e-11\n",
+       "\\item 7.27595761418343e-12\n",
+       "\\item 3.63797880709171e-12\n",
+       "\\item 1.81898940354586e-12\n",
+       "\\item 9.09494701772928e-13\n",
+       "\\item 4.54747350886464e-13\n",
+       "\\item 2.27373675443232e-13\n",
+       "\\item 1.13686837721616e-13\n",
+       "\\item 5.6843418860808e-14\n",
+       "\\item 2.8421709430404e-14\n",
+       "\\item 1.4210854715202e-14\n",
+       "\\item 7.105427357601e-15\n",
+       "\\item 3.5527136788005e-15\n",
+       "\\item 1.77635683940025e-15\n",
+       "\\item 8.88178419700125e-16\n",
+       "\\item 4.44089209850063e-16\n",
+       "\\item 2.22044604925031e-16\n",
+       "\\item 1.11022302462516e-16\n",
+       "\\item 5.55111512312578e-17\n",
+       "\\item 2.77555756156289e-17\n",
+       "\\item 1.38777878078145e-17\n",
+       "\\item 6.93889390390723e-18\n",
+       "\\item 3.46944695195361e-18\n",
+       "\\item 1.73472347597681e-18\n",
+       "\\item 8.67361737988404e-19\n",
+       "\\item 4.33680868994202e-19\n",
+       "\\item 2.16840434497101e-19\n",
+       "\\item 1.0842021724855e-19\n",
+       "\\item 5.42101086242752e-20\n",
+       "\\item 2.71050543121376e-20\n",
+       "\\item 1.35525271560688e-20\n",
+       "\\item 6.7762635780344e-21\n",
+       "\\item 3.3881317890172e-21\n",
+       "\\item 1.6940658945086e-21\n",
+       "\\item 8.470329472543e-22\n",
+       "\\item 4.2351647362715e-22\n",
+       "\\item 2.11758236813575e-22\n",
+       "\\item 1.05879118406788e-22\n",
+       "\\item 5.29395592033938e-23\n",
+       "\\item 2.64697796016969e-23\n",
+       "\\item 1.32348898008484e-23\n",
+       "\\item 6.61744490042422e-24\n",
+       "\\item 3.30872245021211e-24\n",
+       "\\item 1.65436122510606e-24\n",
+       "\\item 8.27180612553028e-25\n",
+       "\\item 4.13590306276514e-25\n",
+       "\\item 2.06795153138257e-25\n",
+       "\\item 1.03397576569128e-25\n",
+       "\\item 5.16987882845642e-26\n",
+       "\\item 2.58493941422821e-26\n",
+       "\\item 1.29246970711411e-26\n",
+       "\\item 6.46234853557053e-27\n",
+       "\\item 3.23117426778526e-27\n",
+       "\\item 1.61558713389263e-27\n",
+       "\\item 8.07793566946316e-28\n",
+       "\\item 4.03896783473158e-28\n",
+       "\\item 2.01948391736579e-28\n",
+       "\\item 1.0097419586829e-28\n",
+       "\\item 5.04870979341448e-29\n",
+       "\\item 2.52435489670724e-29\n",
+       "\\item 1.26217744835362e-29\n",
+       "\\item 6.31088724176809e-30\n",
+       "\\item 3.15544362088405e-30\n",
+       "\\item 1.57772181044202e-30\n",
+       "\\item 7.88860905221012e-31\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0.5\n",
+       "2. 0.25\n",
+       "3. 0.125\n",
+       "4. 0.0625\n",
+       "5. 0.03125\n",
+       "6. 0.015625\n",
+       "7. 0.0078125\n",
+       "8. 0.00390625\n",
+       "9. 0.001953125\n",
+       "10. 0.0009765625\n",
+       "11. 0.00048828125\n",
+       "12. 0.000244140625\n",
+       "13. 0.0001220703125\n",
+       "14. 6.103515625e-05\n",
+       "15. 3.0517578125e-05\n",
+       "16. 1.52587890625e-05\n",
+       "17. 7.62939453125e-06\n",
+       "18. 3.814697265625e-06\n",
+       "19. 1.9073486328125e-06\n",
+       "20. 9.5367431640625e-07\n",
+       "21. 4.76837158203125e-07\n",
+       "22. 2.38418579101562e-07\n",
+       "23. 1.19209289550781e-07\n",
+       "24. 5.96046447753906e-08\n",
+       "25. 2.98023223876953e-08\n",
+       "26. 1.49011611938477e-08\n",
+       "27. 7.45058059692383e-09\n",
+       "28. 3.72529029846191e-09\n",
+       "29. 1.86264514923096e-09\n",
+       "30. 9.31322574615479e-10\n",
+       "31. 4.65661287307739e-10\n",
+       "32. 2.3283064365387e-10\n",
+       "33. 1.16415321826935e-10\n",
+       "34. 5.82076609134674e-11\n",
+       "35. 2.91038304567337e-11\n",
+       "36. 1.45519152283669e-11\n",
+       "37. 7.27595761418343e-12\n",
+       "38. 3.63797880709171e-12\n",
+       "39. 1.81898940354586e-12\n",
+       "40. 9.09494701772928e-13\n",
+       "41. 4.54747350886464e-13\n",
+       "42. 2.27373675443232e-13\n",
+       "43. 1.13686837721616e-13\n",
+       "44. 5.6843418860808e-14\n",
+       "45. 2.8421709430404e-14\n",
+       "46. 1.4210854715202e-14\n",
+       "47. 7.105427357601e-15\n",
+       "48. 3.5527136788005e-15\n",
+       "49. 1.77635683940025e-15\n",
+       "50. 8.88178419700125e-16\n",
+       "51. 4.44089209850063e-16\n",
+       "52. 2.22044604925031e-16\n",
+       "53. 1.11022302462516e-16\n",
+       "54. 5.55111512312578e-17\n",
+       "55. 2.77555756156289e-17\n",
+       "56. 1.38777878078145e-17\n",
+       "57. 6.93889390390723e-18\n",
+       "58. 3.46944695195361e-18\n",
+       "59. 1.73472347597681e-18\n",
+       "60. 8.67361737988404e-19\n",
+       "61. 4.33680868994202e-19\n",
+       "62. 2.16840434497101e-19\n",
+       "63. 1.0842021724855e-19\n",
+       "64. 5.42101086242752e-20\n",
+       "65. 2.71050543121376e-20\n",
+       "66. 1.35525271560688e-20\n",
+       "67. 6.7762635780344e-21\n",
+       "68. 3.3881317890172e-21\n",
+       "69. 1.6940658945086e-21\n",
+       "70. 8.470329472543e-22\n",
+       "71. 4.2351647362715e-22\n",
+       "72. 2.11758236813575e-22\n",
+       "73. 1.05879118406788e-22\n",
+       "74. 5.29395592033938e-23\n",
+       "75. 2.64697796016969e-23\n",
+       "76. 1.32348898008484e-23\n",
+       "77. 6.61744490042422e-24\n",
+       "78. 3.30872245021211e-24\n",
+       "79. 1.65436122510606e-24\n",
+       "80. 8.27180612553028e-25\n",
+       "81. 4.13590306276514e-25\n",
+       "82. 2.06795153138257e-25\n",
+       "83. 1.03397576569128e-25\n",
+       "84. 5.16987882845642e-26\n",
+       "85. 2.58493941422821e-26\n",
+       "86. 1.29246970711411e-26\n",
+       "87. 6.46234853557053e-27\n",
+       "88. 3.23117426778526e-27\n",
+       "89. 1.61558713389263e-27\n",
+       "90. 8.07793566946316e-28\n",
+       "91. 4.03896783473158e-28\n",
+       "92. 2.01948391736579e-28\n",
+       "93. 1.0097419586829e-28\n",
+       "94. 5.04870979341448e-29\n",
+       "95. 2.52435489670724e-29\n",
+       "96. 1.26217744835362e-29\n",
+       "97. 6.31088724176809e-30\n",
+       "98. 3.15544362088405e-30\n",
+       "99. 1.57772181044202e-30\n",
+       "100. 7.88860905221012e-31\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  [1] 5.000000e-01 2.500000e-01 1.250000e-01 6.250000e-02 3.125000e-02\n",
+       "  [6] 1.562500e-02 7.812500e-03 3.906250e-03 1.953125e-03 9.765625e-04\n",
+       " [11] 4.882812e-04 2.441406e-04 1.220703e-04 6.103516e-05 3.051758e-05\n",
+       " [16] 1.525879e-05 7.629395e-06 3.814697e-06 1.907349e-06 9.536743e-07\n",
+       " [21] 4.768372e-07 2.384186e-07 1.192093e-07 5.960464e-08 2.980232e-08\n",
+       " [26] 1.490116e-08 7.450581e-09 3.725290e-09 1.862645e-09 9.313226e-10\n",
+       " [31] 4.656613e-10 2.328306e-10 1.164153e-10 5.820766e-11 2.910383e-11\n",
+       " [36] 1.455192e-11 7.275958e-12 3.637979e-12 1.818989e-12 9.094947e-13\n",
+       " [41] 4.547474e-13 2.273737e-13 1.136868e-13 5.684342e-14 2.842171e-14\n",
+       " [46] 1.421085e-14 7.105427e-15 3.552714e-15 1.776357e-15 8.881784e-16\n",
+       " [51] 4.440892e-16 2.220446e-16 1.110223e-16 5.551115e-17 2.775558e-17\n",
+       " [56] 1.387779e-17 6.938894e-18 3.469447e-18 1.734723e-18 8.673617e-19\n",
+       " [61] 4.336809e-19 2.168404e-19 1.084202e-19 5.421011e-20 2.710505e-20\n",
+       " [66] 1.355253e-20 6.776264e-21 3.388132e-21 1.694066e-21 8.470329e-22\n",
+       " [71] 4.235165e-22 2.117582e-22 1.058791e-22 5.293956e-23 2.646978e-23\n",
+       " [76] 1.323489e-23 6.617445e-24 3.308722e-24 1.654361e-24 8.271806e-25\n",
+       " [81] 4.135903e-25 2.067952e-25 1.033976e-25 5.169879e-26 2.584939e-26\n",
+       " [86] 1.292470e-26 6.462349e-27 3.231174e-27 1.615587e-27 8.077936e-28\n",
+       " [91] 4.038968e-28 2.019484e-28 1.009742e-28 5.048710e-29 2.524355e-29\n",
+       " [96] 1.262177e-29 6.310887e-30 3.155444e-30 1.577722e-30 7.888609e-31"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -1018,6 +1262,7 @@
     }
    ],
    "source": [
+    "resultados\n",
     "sum(resultados)"
    ]
   },
