--- a/src/zero2hero/zero2hero_0114.ipynb
+++ b/src/zero2hero/zero2hero_0114.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -40,8 +40,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 614732</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1093655</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td>2302686</td><td>123.0</td><td>4559758</td><td>243.6</td><td>3550199</td><td>189.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>3778649</td><td> 28.9</td><td>8388608</td><td> 64.0</td><td>7017886</td><td> 53.6</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -50,8 +50,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  614732 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
-       "\tVcells & 1093655 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\tNcells & 2302686 & 123.0 & 4559758 & 243.6 & 3550199 & 189.7\\\\\n",
+       "\tVcells & 3778649 &  28.9 & 8388608 &  64.0 & 7017886 &  53.6\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -60,36 +60,18 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  614732 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
-       "| Vcells | 1093655 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "| Ncells | 2302686 | 123.0 | 4559758 | 243.6 | 3550199 | 189.7 |\n",
+       "| Vcells | 3778649 |  28.9 | 8388608 |  64.0 | 7017886 |  53.6 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  614732 32.9 1321401    70.6 1321401  70.6\n",
-       "Vcells 1093655  8.4 8388608    64.0 1632451  12.5"
+       "       used    (Mb)  gc trigger (Mb)  max used (Mb) \n",
+       "Ncells 2302686 123.0 4559758    243.6 3550199  189.7\n",
+       "Vcells 3778649  28.9 8388608     64.0 7017886   53.6"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"package 'data.table' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'rpart' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'rpart.plot' was built under R version 4.2.3\"\n",
-      "Warning message:\n",
-      "\"package 'caret' was built under R version 4.2.3\"\n",
-      "Loading required package: ggplot2\n",
-      "\n",
-      "Loading required package: lattice\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -114,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -147,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -161,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -178,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -204,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -217,18 +199,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51050000 \n",
+      "51050000 57620000 \n",
+      "51050000 57620000 57940000 \n",
+      "51050000 57620000 57940000 49860000 \n",
+      "51050000 57620000 57940000 49860000 51190000 \n"
+     ]
+    }
+   ],
    "source": [
     "for( semilla in ksemillas)\n",
     "{\n",
     "    ganancia  <- GananciaArbol( semilla, dataset, x=param, train=0.70 )\n",
     "    vector_ganancias  <- c( vector_ganancias, ganancia)\n",
+    "    cat(vector_ganancias, \"\\n\")\n",
     "}"
    ]
   },
@@ -297,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
